css/channel.css
/* ... */
.channelHeader .titleText .about {
  font-size: 12px;
  color: #6e6e6e;
  max-width: 384px;
  position: relative;
}
.channelHeader .titleText .about:not(.fullText) {
  max-height: 36px;
  overflow: hidden;
}
  .channelHeader .metadata {
    margin-top: 5px;
    padding-top: 5px;
    border-top: 1px solid hsl(0,0%,85%);
    color: hsl(0,0%,70%);
    text-shadow: none;
  }
    .channelHeader .metadata .key,
    .channelHeader .metadata .value {
      text-align: center;
    }
    .channelHeader .metadata .key {
      font-size: 10px;
      color: hsl(0,0%,50%);
      line-height: 1;
    }
    .channelHeader .metadata .value {
      color: #333;
      line-height: 2;
    }

.channelView header nav {
  white-space: nowrap;
  float: right;
}
.channelView header nav > span {
  margin-left: 5px;
}
.channelView header nav > span:first-child {
  margin-left: 0;
}
.channelView header nav.inChannel .channel {
  display: none;
}
.channelView header nav.inMessages .messages {
  display: none;
}
.channelView header nav .tab {
  height: 29px;
  padding: 1px 1px 0;
  margin-right: -1px;
  vertical-align: bottom;
  overflow: hidden;
  position: relative;
  display: inline-block;
}
.channelView header nav .tab .holder {
  padding: 5px 13px 6px;
  font-size: 12px;
  color: rgba(0,0,0,0.76);
  text-shadow: 0 1px rgba(255,255,255,0.55);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0,0,0,0.03)), color-stop(1, rgba(0,0,0,0.08)));
  background: -webkit-linear-gradient(top, rgba(0,0,0,0.03) 0%, rgba(0,0,0,0.08) 100%);
  background:    -moz-linear-gradient(top, rgba(0,0,0,0.03) 0%, rgba(0,0,0,0.08) 100%);
  background:     -ms-linear-gradient(top, rgba(0,0,0,0.03) 0%, rgba(0,0,0,0.08) 100%);
  background:      -o-linear-gradient(top, rgba(0,0,0,0.03) 0%, rgba(0,0,0,0.08) 100%);
  background:         linear-gradient(to bottom, rgba(0,0,0,0.03) 0%, rgba(0,0,0,0.08) 100%);
  border-radius: 3px 3px 0 0;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.08),0 0 13px rgba(0,0,0,0.05);
  display: block;
  position: relative;
  cursor: pointer;
}
.channelView header nav .tab.newMessage .holder {
  padding-right: 33px;
}
.channelView header nav .tab.newMessage .counter {
  right: 10px;
  top: 4px;
}
.channelView header nav .tab.active .holder {
  background: #fff;
  z-index: 3;
  cursor: default;
}
.stream {
  width: 580px;
  border-radius: 5px 5px;
  box-shadow:
    0 0 0 1px rgba(0,0,0,0.08),
    0 0 13px rgba(0,0,0,0.05);
  position: relative;
  z-index: 1;
}
.pageName {
  padding: 8px 13px 5px;
  background: white;
}
.post {
  background: #fff;
  position: relative;
  box-shadow: inset 0 -1px rgba(0,0,0,0.08);
}
.post:first-child {
  border-radius: 5px 5px 0 0;
}
.post:last-child {
  border-radius: 0 0 5px 5px;
  box-shadow: none;
}
.post:only-child {
  border-radius: 5px;
  box-shadow: none;
}
.stream .newTopic + .notifications + .posts .post:first-child {
  border-radius: 0;
}
.stream .newTopic + .notifications + .posts .post:only-child {
  border-radius: 0 0 5px 5px;
  box-shadow: none;
}
.stream .newTopic {
  padding: 13px 21px 13px 84px;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #eee));
  background: -webkit-linear-gradient(top, #fff 0%, #eee 100%);
  background:    -moz-linear-gradient(top, #fff 0%, #eee 100%);
  background:     -ms-linear-gradient(top, #fff 0%, #eee 100%);
  background:      -o-linear-gradient(top, #fff 0%, #eee 100%);
  background:         linear-gradient(to bottom, #fff 0%, #eee 100%);
  border-radius: 5px 5px 0 0;
  display: block;
  overflow: hidden;
  position: relative;
  z-index: 1;
}
.stream .newTopic .avatar {
  left: 36px;
  top: 12px;
  width: 34px;
  position: absolute;
  z-index: 2;
  -webkit-transition: width 250ms, left 250ms;
     -moz-transition: width 250ms, left 250ms;
      -ms-transition: width 250ms, left 250ms;
       -o-transition: width 250ms, left 250ms;
          transition: width 250ms, left 250ms;
}
  .stream .newTopic.write .avatar {
    left: 21px;
    width: 50px;
  }
.stream .newTopic .holder,
.stream .answer .holder {
  position: relative;
  overflow: hidden;
}

/* big thanks to http://www.alistapart.com/articles/expanding-text-areas-made-elegant/ */
.expandingArea {
  position: relative;
  background: #fff;
  z-index: 2;
  min-height: 34px;
}

.expandingArea > textarea,
.expandingArea > pre {
  padding: 6px 5px;
  background: transparent;
  font: 13px/19.5px sans-serif;
  /* Make the text soft-wrap */
  white-space: pre-wrap;
  word-wrap: break-word;
}

.expandingArea > textarea {
  width: 100%;
  /* This height is used when JS is disabled */
}
.expandingArea.active > textarea {
  /* Hide any scrollbars */
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  /* Remove WebKit user-resize widget */
  resize: none;
}
.expandingArea > pre {
  display: none;
}
.expandingArea.active > pre {
  display: block;
  /* Hide the text; just using it for sizing */
  visibility: hidden;
}

/* custom styles/transitions */
.expandingArea {
  border: 1px solid rgba(0,0,0,0.13);
  box-shadow: inset 1px 1px rgba(0,0,0,0.05);
  -webkit-transition: min-height 250ms, margin 250ms;
     -moz-transition: min-height 250ms, margin 250ms;
      -ms-transition: min-height 250ms, margin 250ms;
       -o-transition: min-height 250ms, margin 250ms;
          transition: min-height 250ms, margin 250ms;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
      -ms-box-sizing: border-box;
       -o-box-sizing: border-box;
          box-sizing: border-box;
}

.stream .newTopic.write .expandingArea,
.stream .answer.write .expandingArea {
  min-height: 50px;
  color: #000;
  resize: vertical;
  margin-bottom: 34px;
}

.stream .preview {
  border-bottom: 1px solid rgba(0,0,0,0.13);
  padding: 1em 21px 1em 84px;
  background: #eee;
}
.stream .preview:empty {
  padding: 0px;
}
.stream .preview .embed + .embed {
  margin-top: 1em;
}
/* ... */

